2006-01-26  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AC_HEADER_STDBOOL): Sync from gnulib.
	Use 'defined __GNUC__' rather than __GNUC__.

2006-01-25  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4: Merge from gnulib; we still don't quite match
	exactly, but we're getting closer.
	(AC_HEADER_STDBOOL): Add some comments.

2006-01-24  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Add AC_LIBSOURCES([intprops.h]).
	Reported by Mark D. Baushke.

2006-01-23  Paul Eggert  <eggert@cs.ucla.edu>

	* getopt.m4 (gl_PREREQ_GETOPT): Check for getenv decl.

2006-01-20  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Use -Wl,-z,ignore
	rather than -Xlinker -z -Xlinker ignore, as it's more portable.
	Suggested by Bruno Haible.

2006-01-17  Jim Meyering  <jim@meyering.net>

	* fts.m4 (gl_FUNC_FTS_CORE): Depend on gl_FUNC_OPENAT.

2006-01-16  Paul Eggert  <eggert@cs.ucla.edu>

	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Don't use ldd, as
	it's not portable and it doesn't work with cross-compiles.
	Problem reported by Bruno Haible.  Fix missing-$ typo in
	'test "gl_cv_ignore_unused_libraries" ...' that prevented
	-zignore from being used with Sun's C compiler.

2006-01-13  Jim Meyering  <jim@meyering.net>

	* ls-mntd-fs.m4 (AC_FUNC_GETMNTENT): Invoke AC_CHECK_FUNCS(getmntent)
	unconditionally so that tests of $ac_cv_func_getmntent (e.g., in
	gl_LIST_MOUNTED_FILE_SYSTEMS) need not double-quote uses that variable,
	to accommodate the rare case in which getmntent is available in none
	of the libraries checked.  This happens at least on FreeBSD 5.0.

2006-01-11  Paul Eggert  <eggert@cs.ucla.edu>

	* prereq.m4 (gl_PREREQ): Require gl_STDINT_H.
	* stdint.m4: New file, from gnulib.

2006-01-11  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Require and compile fchmodat.c.
	Check for the lchmod function.

2006-01-10  Paul Eggert  <eggert@cs.ucla.edu>
